2009-11-17  Roland Levillain  <roland@lrde.epita.fr>

	* python/morpho-segm.py: Remove a superfluous semi-colon.

2013-03-05  Roland Levillain  <roland@lrde.epita.fr>

	Replace remaining uses of mln::morpho::meyer_wst in Swilena.

	* morpho.ixx: Here, by mln::morpho::watershed::flooding.
	* image2d_int_u8.i,
	* python/swilena.py,
	* python/morpho-segm.py:
	Adjust.

2012-10-05  Roland Levillain  <roland@lrde.epita.fr>

	No longer wrap mln::value::int_u32.

	* int_u24.i: Remove.
	* Makefile.am (wrappers): Remove int_u32.i.
	* python/Makefile.am: No longer generate Python wrapper from
	int_u32.i.

2012-10-05  Roland Levillain  <roland@lrde.epita.fr>

	Fix Swilena's build.

	* image2d_int_u8.i: Use int_u24 instead of int_u32 to avoid
	overflow problems in mln::metal::math::pow.

2012-10-05  Roland Levillain  <roland@lrde.epita.fr>

	Wrap mln::value::int_u24.

	* int_u24.i: New.
	* Makefile.am (wrappers): Add int_u24.i.
	* python/Makefile.am: Generate Python wrapper from int_u24.i.

2009-10-27  Roland Levillain  <roland@lrde.epita.fr>

	Clean up Swilena Makefiles.

	* Makefile.am: Here.
	* python/Makefile.am: Likewise.
	(python_PYTHON): Move data.py...
	(EXTRA_DIST): ...here.

2010-10-25  Roland Levillain  <roland@lrde.epita.fr>

	Fix Swilena's dependency tracking.

	* python/Makefile.am (%-wrap.cc %.py): Honor Automake's `AMDEP'
	internal conditional.

2010-04-26  Roland Levillain  <roland@lrde.epita.fr>

	Canonize Swilena's tests' output file names.

	* python/morpho-fun.py,
	* python/morpho-segm.py:
	Add the name of the test as prefix of its output file names.
	* python/Makefile.am (CLEANFILES): Adjust.
	Add morpho-segm-gradient.pgm.
	Rename as...
	(MOSTLYCLEANFILES): ...this.

2010-06-03  Roland Levillain  <roland@lrde.epita.fr>

	Clean up a bit Swilena's Makefiles.

	* Makefile.am, python/Makefile.am: Here.

2009-09-12  Roland Levillain  <roland@lrde.epita.fr>

	* neighb2d.i: Aesthetic changes.

2009-09-12  Roland Levillain  <roland@lrde.epita.fr>
