@@ -1,3 +1,15 @@
+2010-02-08  Roland Levillain  <roland@lrde.epita.fr>
+
+	Improve dependency management in Swilena/Python.
+
+	* python/Makefile.am (int_u_ixx_deps, box_ixx_deps)
+	(morpho_ixx_deps):
+	New variables.
+	(int_u8-wrap.cc, int_u32-wrap.cc, box2d-wrap.cc)
+	(box2d_piter-wrap.cc, point2d-wrap.cc, dynamic_image2d-wrap.cc)
+	(image2d_int-wrap.cc, image2d_int_u8-wrap.cc):
+	Add dependencies.
+
 2009-11-17  Roland Levillain  <roland@lrde.epita.fr>
 
 	* python/morpho-segm.py: Remove a superfluous semi-colon.
